fixed small spacing issue in sidebar and added Netlify robots.txt configuration

--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -160,9 +160,8 @@
     place-self: start stretch;
     height: $std-line-thickness;
     background: $primary-yellow;
-    //margin-bottom: $std-grid-spacing;
+    margin-bottom: $std-grid-spacing;
     border-radius: $std-line-thickness;
-
   }
 }
 
